--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.googlecode.gwtquery.plugins</groupId>
         <artifactId>droppable</artifactId>
-        <version>1.0.9-SNAPSHOT</version>
+        <version>1.0.9-1</version>
     </parent>
 
     <name>Droppable plugin for gQuery</name>
